@@ -841,6 +841,12 @@ clear: left;
 padding: 5px 0;
 padding-left: 5px;
 }
+.active-scaffold .form-element select + .sub-form {
+float: none;
+}
+.active-scaffold .form-element .show-new-subform {
+margin-left: 5px;
+}
 
 .active-scaffold .sub-form h5 {
 margin-left: -5px;
